refactor(web2): drop the remaining deprecated and unchecked calls
The marketplace feedback builds its connection from a URI rather than from
the URL constructor deprecated in Java 20, the thread list asks a thread for
its identifier with threadId, and the generic cast that reads the default
value of a self configuring property is declared unchecked, which is what it
is: the type comes from the scalar of the attribute definition.

The deprecations left are the legacy cloud APIs, CloudService and
CloudServiceFactory, and the driver service: the console uses them on
purpose.